[package]
name = "jail-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = { version = "0.1.20", features = ["http1", "http2", "server", "service", "tokio"] }
listenfd = "1.0.2"
regex = "1.12.3"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
